{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 94,
  "lineage": "fe638534-2b76-ef4a-d798-49face9f8ea3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d78038937120e89",
            "arn": "arn:aws:ec2:ap-south-1:767397770552:elastic-ip/eipalloc-00d78038937120e89",
            "domain": "vpc",
            "id": "eipalloc-00d78038937120e89",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-240-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.240.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eip"
            },
            "tags_all": {
              "Name": "my-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:internet-gateway/igw-033d45cb322a4cff0",
            "id": "igw-033d45cb322a4cff0",
            "owner_id": "767397770552",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:loadbalancer/app/my-alb/257279b62d653ff8",
            "arn_suffix": "app/my-alb/257279b62d653ff8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-571490776.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:loadbalancer/app/my-alb/257279b62d653ff8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cf21b96083c4706d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073e02f03a258fe1f"
              },
              {
                "subnet_id": "subnet-0edd5872969ed9ce5"
              }
            ],
            "subnets": [
              "subnet-073e02f03a258fe1f",
              "subnet-0edd5872969ed9ce5"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "vpc_id": "vpc-0bcded2bfcc667440",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:listener/app/my-alb/257279b62d653ff8/dfe2881f3b5b5b65",
            "certificate_arn": "arn:aws:acm:ap-south-1:767397770552:certificate/eeb67ce8-293c-4bd0-9b0d-74fad891bb53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:targetgroup/my-alb-tg/5b616e944527f810",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:listener/app/my-alb/257279b62d653ff8/dfe2881f3b5b5b65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:loadbalancer/app/my-alb/257279b62d653ff8",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this",
            "data.aws_acm_certificate.ssl_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:targetgroup/my-alb-tg/5b616e944527f810",
            "arn_suffix": "targetgroup/my-alb-tg/5b616e944527f810",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 25,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:767397770552:targetgroup/my-alb-tg/5b616e944527f810",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-alb-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-alb-tg"
            },
            "tags_all": {
              "Name": "my-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d78038937120e89",
            "association_id": "eipassoc-0c3cbfe9a7c0c090c",
            "connectivity_type": "public",
            "id": "nat-0b51a8d9ccd16a413",
            "network_interface_id": "eni-096929e45032cee6b",
            "private_ip": "10.0.1.90",
            "public_ip": "43.204.240.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073e02f03a258fe1f",
            "tags": {
              "Name": "my-ngw"
            },
            "tags_all": {
              "Name": "my-ngw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:route-table/rtb-0558f4db8d4d157a5",
            "id": "rtb-0558f4db8d4d157a5",
            "owner_id": "767397770552",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b51a8d9ccd16a413",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-rt"
            },
            "tags_all": {
              "Name": "my-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:route-table/rtb-0153afadfa4619b49",
            "id": "rtb-0153afadfa4619b49",
            "owner_id": "767397770552",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033d45cb322a4cff0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "tags_all": {
              "Name": "my-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c77637eb59119bf6",
            "route_table_id": "rtb-0558f4db8d4d157a5",
            "subnet_id": "subnet-05d6308e2265c9ec0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002e63a4971073eaf",
            "route_table_id": "rtb-0558f4db8d4d157a5",
            "subnet_id": "subnet-008ae5d00b035694c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017b20137555e603e",
            "route_table_id": "rtb-0153afadfa4619b49",
            "subnet_id": "subnet-073e02f03a258fe1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7fe2fb35c4806b6",
            "route_table_id": "rtb-0153afadfa4619b49",
            "subnet_id": "subnet-0edd5872969ed9ce5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:security-group/sg-0cf21b96083c4706d",
            "description": "This security group is for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf21b96083c4706d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20251214072200054300000001",
            "name_prefix": "terraform-",
            "owner_id": "767397770552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-alb-sg"
            },
            "tags_all": {
              "Name": "my-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:security-group/sg-0080213cbcc2dd0ab",
            "description": "This security group is for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0080213cbcc2dd0ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf21b96083c4706d"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20251214072202565500000004",
            "name_prefix": "terraform-",
            "owner_id": "767397770552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-ecs-sg"
            },
            "tags_all": {
              "Name": "my-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:subnet/subnet-05d6308e2265c9ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d6308e2265c9ec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397770552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-private-subnet-1"
            },
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:subnet/subnet-008ae5d00b035694c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008ae5d00b035694c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397770552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet-2"
            },
            "tags_all": {
              "Name": "my-private-subnet-2"
            },
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:subnet/subnet-073e02f03a258fe1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e02f03a258fe1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397770552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-public-subnet-1"
            },
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:subnet/subnet-0edd5872969ed9ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd5872969ed9ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397770552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-public-subnet-2"
            },
            "vpc_id": "vpc-0bcded2bfcc667440"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397770552:vpc/vpc-0bcded2bfcc667440",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb5f7ba73eb7f23a",
            "default_route_table_id": "rtb-00395ec6ef219c184",
            "default_security_group_id": "sg-0721342f89e1e1ef5",
            "dhcp_options_id": "dopt-0ba62e048aeb1040e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcded2bfcc667440",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00395ec6ef219c184",
            "owner_id": "767397770552",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}